tests/NormalTests/paczka2/big_fuzzy/68605326.err
Error in line 4: rD1h9qWPQDf A728 376,4
Error in line 17: rD1h9qWPQDf S408 14,9
Error in line 27: qMT A728 34,7
Error in line 41: qIQL6xa A178 61,2
Error in line 52: T7DGFQ S823 40,1
Error in line 53: mdP4ILx S408 17,6
Error in line 81: qMT S408 4,5
Error in line 80: rD1h9qWPQDf S408 222,3
Error in line 87: rD1h9qWPQDf A178 71,7
Error in line 79: mdP4ILx S823 23,3
Error in line 88: rD1h9qWPQDf A728 49,9
Error in line 63: qIQL6xa S823 384,3
Error in line 91: mdP4ILx A728 75,8
Error in line 93: mqldGxY A178 34,3
Error in line 101: S823 S823 41,0
Error in line 95: qIQL6xa S408 41,6
Error in line 114: mdP4ILx S823 37,31
Error in line 106: S823 A178 28,8
Error in line 116: T7DGFQ S408 27,99
Error in line 109: qMT A728 94,4
Error in line 123: rD1h9qWPQDf S823 15,4
Error in line 144: mdP4ILx A178 75,4
Error in line 117: T7DGFQ S408 55,0
Error in line 140: rD1h9qWPQDf A728 84,1
Error in line 153: T7DGFQ S823 9,0
Error in line 165: qMT A178 64,1
Error in line 173: qMT A728 25,9
Error in line 175: mqldGxY S823 13,5
Error in line 149: S823 A728 214,3
Error in line 181: S823 S823 64,6
Error in line 193: qIQL6xa A728 72,2
Error in line 207: mqldGxY S823 55,9
Error in line 216: qMT A728 44,3
Error in line 227: S823 S823 68,3
Error in line 232: T7DGFQ A178 35,9
Error in line 235: qMT A728 42,3
Error in line 242: rD1h9qWPQDf S823 152,3
Error in line 239: qMT S408 22,2
Error in line 234: T7DGFQ S823 0,6
Error in line 246: S823 A728 32,5
